--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin: 0; /* Agrega esta línea */
+  padding: 0; /* Agrega esta línea */
 }
 
 .App-header {
@@ -22,21 +13,20 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: 0; /* Agrega esta línea */
+  padding: 0; /* Agrega esta línea */
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .page-item {
   padding-top: 100px;
+}
+
+.botonDeModo {
+  width: 80px;
+  margin-left: auto;
+  margin-top: -100px;
 }
