--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,25 +1,51 @@
 * {
-    margin:  0;
+    margin: 0;
     padding: 0;
+    box-sizing: border-box; /* Agrega esta línea */
   }
 
-.logo-container {
+  .container {
+    max-width: 100%; /* Agrega esta línea */
+    padding: 0 15px; /* Ajusta los márgenes laterales según tus necesidades */
+  }
+  
+  .logo-container {
     position: relative;
-    width: 80px;
-    height: 80px;
+    max-width: 150px;
+    min-width: 70px;
+    max-height: 70px;
+    min-height: 70px;
   }
   
   .logo {
     position: absolute;
     top: 0;
     left: 0;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 80%;
     opacity: 0;
     transition: opacity 1s ease-in-out;
   }
   
   .logo.visible {
     opacity: 1;
+  }
+  
+  .filter-input {
+    flex: 1; /* Cambio importante */
+    width: 0; /* Cambio importante */
+    min-width: 100px; /* Ajusta el ancho mínimo según tus necesidades */
+    margin-right: 10px;
+  }
+  
+  .input-group {
+    display: flex; /* Cambio importante */
+    align-items: center; /* Cambio importante */
+    padding-left: 20px;
+    padding-right: 10px;
+  }
+  
+  .input-group-append {
+    white-space: nowrap; /* Evita que el botón se envuelva */
   }
   
