--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* Agrega esta línea */
+    box-sizing: border-box;
   }
 
   .container {
-    max-width: 100%; /* Agrega esta línea */
-    padding: 0 15px; /* Ajusta los márgenes laterales según tus necesidades */
+    max-width: 100%;
+    padding: 0 40px; 
   }
   
   .logo-container {
@@ -32,20 +32,20 @@
   }
   
   .filter-input {
-    flex: 1; /* Cambio importante */
-    width: 0; /* Cambio importante */
-    min-width: 100px; /* Ajusta el ancho mínimo según tus necesidades */
+    flex: 1; 
+    width: 0;
+    min-width: 100px; 
     margin-right: 10px;
   }
   
   .input-group {
-    display: flex; /* Cambio importante */
-    align-items: center; /* Cambio importante */
+    display: flex; 
+    align-items: center; 
     padding-left: 20px;
     padding-right: 10px;
   }
   
   .input-group-append {
-    white-space: nowrap; /* Evita que el botón se envuelva */
+    white-space: nowrap;
   }
   
