--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Nova+Cut&family=Roboto:wght@400;700&family=Space+Mono&family=Vast+Shadow&display=swap');
+
 .App {
   text-align: center;
   margin: 0;
@@ -45,3 +47,9 @@
 .card:not(:hover) {
   transform: scale(1);
 }
+
+.materia {
+  font-family: 'Roboto', sans-serif; 
+  font-size: 16px;
+}
+
