--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Nasa';
+  src: url('./img/Nasa.ttf') format('truetype');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -49,3 +54,9 @@
     white-space: nowrap;
   }
   
+.titulo {
+  font-family: 'Nasa';
+  font-size: 3vw;
+  margin-top: -8px;
+  margin-left: 18px;
+}
