--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ footer {
 .materia {
   font-family: 'Roboto', sans-serif; 
   font-size: 16px;
+  text-align: center;
 }
 
 brand {
@@ -92,8 +93,8 @@ brand {
   border-radius: 20px;
   border-style: solid;
   margin-bottom: 5px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 
@@ -110,6 +111,7 @@ brand {
   gap: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
+  margin-right: 20px;
 }
 
 .lastKeywords-item {
@@ -117,7 +119,9 @@ brand {
   padding: 8px;
   border-radius: 4px;
   overflow: hidden;
+  font-size: 12px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  margin-left: 20px;
 }
 
